--- a/app/src/main/res/layout/app_icon.xml
+++ b/app/src/main/res/layout/app_icon.xml
@@ -1,40 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="@dimen/app_width"
-    android:layout_height="@dimen/app_height"
+    android:id="@+id/folder_online_apps"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:layout_marginLeft="@dimen/app_margin_left"
     android:layout_marginTop="@dimen/app_margin_top"
     android:layout_marginRight="@dimen/app_margin_right"
     android:layout_marginBottom="@dimen/app_margin_bottom"
     android:background="@drawable/bg_app"
-    android:gravity="center"
+    android:clickable="true"
+    android:gravity="center_horizontal"
     android:orientation="vertical">
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="46dp"
-        android:layout_marginBottom="8dp"
+    <TextView
+        android:id="@+id/app_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:drawableLeft="@drawable/ic_online_apps_title"
         android:gravity="center"
-        android:orientation="horizontal">
-
-        <ImageView
-            android:id="@+id/app_small_icon"
-            android:layout_width="38dp"
-            android:layout_height="38dp"
-            android:src="@drawable/ic_system_settings_title" />
-
-        <TextView
-            android:id="@+id/app_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/system_settings"
-            android:textColor="#FFFFFF"
-            android:textSize="22sp" />
-    </LinearLayout>
-
+        android:padding="5dp"
+        android:text="@string/online_apps"
+        android:textColor="#FFFFFF"
+        android:textSize="@dimen/app_title_text_size" />
     <ImageView
         android:id="@+id/app_large_icon"
-        android:layout_width="206dp"
-        android:layout_height="206dp"
-        android:src="@drawable/ic_system_settings" />
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@drawable/ic_online_apps" />
 </LinearLayout>
